# game-of-life

./: Cargo.toml  LICENSE_MIT  README.md  TODO.md
demo/: index.html  package-lock.json  package.json  vite.config.ts
demo/src/: App.tsx  index.css
demo/src/components/: Canvas.tsx  Container.tsx
src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
