[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Rodrigo V. Honorato <rvhonorato@pm.me>"]
edition = "2018"
description = "Conway's Game of Life implemented in Rust, compiled to WebAssembly"
repository = "https://github.com/rvhonorato/game-of-life"
license = "Unlicense"
keywords = [
  "game-of-life",
  "webassembly",
  "wasm",
  "cellular-automata",
  "simulation",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
